# BitBuddies

./: .gitignore  pyproject.toml
.github/workflows/: github-actions.yml
migrations/: env.py
migrations/versions/: 2024_02_02_1323-3848f9165405_added_user_table.py  2024_02_02_1402-4cc2a80bb338_added_team_table.py  2024_02_03_2050-156fd9b91cf2_user_team_m2m.py  2024_02_10_2040-9314c5b75017_rename_user_field_role.py  2024_02_18_1845-b9a091dd7a4f_fix_user_position.py  2024_02_18_1954-04e4874eb02b_init.py  2024_03_04_1107-6fb65c1c54ee_add_owner_id.py
src/: __init__.py  config.py  database.py  main.py
src/accounts/: __init__.py  backend.py  config.py  crud.py  dependencies.py  manager.py  models.py  router.py  schemas.py
src/accounts/fastapi_users/: fastapi_users.py  register.py  users.py  verify.py
src/emails/: email_confirmation.html  forgot_password_confirmation.html
src/teams/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
tests/: __init__.py  conftest.py  test_auth.py  test_user.py
