[tool.poetry]
name = "bit-buddies"
version = "0.1.0"
description = ""
authors = ["Oleh Sofronov <olehsofronov@gmail.com>, Vladislav Gryadko <vgryadko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
sqlalchemy = "^2.0.25"
pytest = "^8.0.0"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
aiosqlite = "^0.19.0"
fastapi-mail = "^1.4.1"
pillow = "^10.2.0"
fastapi-pagination = "^0.12.17"
fastapi-filter = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
